# amocrm-account-manager

./: .gitignore  .mcp.json  README.md  pyproject.toml
.codex-plugin/: plugin.json
amocrm_mcp/: __init__.py  server.py
scripts/: create_all_lead_field_types.py  create_bulk_test_deals.py  create_test_leads_with_tasks.py  install_personal_plugin.py  reschedule_overdue_tasks_to_friday.py  run_amocrm_mcp.py  setup_marketing_agency.py  test_amocrm_core.py  test_communication_fact_pipeline.py  update_codex_config.py
skills/amocrm-create-pipelines/: SKILL.md
skills/amocrm-create-pipelines/agents/: openai.yaml
skills/amocrm-create-pipelines/references/: amocrm-status-colors.md  communication-fact.md
tests/: test_server.py
