[project]
name = "amocrm-mcp"
version = "0.1.0"
description = "MCP server for amoCRM account management using a long-lived Bearer token."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Codex" }]
dependencies = []

[project.scripts]
amocrm-mcp = "amocrm_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
